<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:id="@+id/mainLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <com.smartit.beunique.components.BUniqueTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/gender"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14ssp" />

                <RadioGroup
                    android:id="@+id/radio_btn_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_mr_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/mr"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12ssp" />

                    <RadioButton
                        android:id="@+id/radio_mrs_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/mrs"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12ssp" />

                    <RadioButton
                        android:id="@+id/radio_miss_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/miss"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12ssp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_user" />

                <com.smartit.beunique.components.BUniqueEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/row_header_color"
                    android:ellipsize="end"
                    android:hint="@string/first_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_user" />

                <com.smartit.beunique.components.BUniqueEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/row_header_color"
                    android:ellipsize="end"
                    android:hint="@string/last_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_email_envelope" />

                <com.smartit.beunique.components.BUniqueEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/row_header_color"
                    android:ellipsize="end"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_lock"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.smartit.beunique.components.BUniqueEditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/row_header_color"
                    android:ellipsize="end"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.smartit.beunique.components.FontAwesomeIcon
                    android:id="@+id/font_see_pwd"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/icon_eye_slash"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/et_password"
                    app:layout_constraintEnd_toEndOf="@+id/et_password" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:textSize="@dimen/_12sdp"
                    app:ccp_defaultNameCode="IN" />

                <com.smartit.beunique.components.BUniqueEditText
                    android:id="@+id/et_mobile_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:backgroundTint="@color/row_header_color"
                    android:ellipsize="end"
                    android:hint="@string/mobile_no"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>

        <com.smartit.beunique.components.BUniqueTextView
            android:id="@+id/tvRegisterBtn"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/log_in_btn_bg"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/register"
            android:textColor="@color/row_header_color"
            android:textSize="@dimen/_14ssp"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/layout_have_an_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            android:padding="@dimen/_2sdp">

            <com.smartit.beunique.components.BUniqueTextView
                android:id="@+id/tvHaveAnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/have_an_account"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />

            <com.smartit.beunique.components.BUniqueTextView
                android:id="@+id/tvLoginNowBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_now"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />

            <View
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_2sdp"
                android:layout_gravity="center"
                android:background="@drawable/register_dotted_line_bg" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
