<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_320sdp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/productNameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/row_header_color">

        <com.smartit.beunique.components.BUniqueTextView
            android:id="@+id/product_video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/write_a_review"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/font_cross"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.smartit.beunique.components.FontAwesomeIcon
            android:id="@+id/font_cross"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/icon_cross"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:id="@+id/quality_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameLayout">

        <com.smartit.beunique.components.BUniqueTextView
            android:id="@+id/tv_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/quality"
            android:textSize="@dimen/_14sdp" />

        <RatingBar
            android:id="@+id/reviewRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:stepSize="1.0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quality_layout">

        <com.smartit.beunique.components.BUniqueTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight=".40"
            android:text="@string/product_title"
            android:textSize="@dimen/_14sdp" />

        <com.smartit.beunique.components.BUniqueEditText
            android:id="@+id/et_review_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight=".60"
            android:background="@drawable/layout_border"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_layout">

        <com.smartit.beunique.components.BUniqueTextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight=".40"
            android:text="@string/your_name"
            android:textSize="@dimen/_14sdp" />

        <com.smartit.beunique.components.BUniqueEditText
            android:id="@+id/et_customer_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight=".60"
            android:background="@drawable/layout_border"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_layout">

        <com.smartit.beunique.components.BUniqueTextView
            android:id="@+id/tv_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/your_review"
            android:textSize="@dimen/_14sdp" />

        <com.smartit.beunique.components.BUniqueEditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/layout_border"
            android:ems="10"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/submit_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_description_layout">

        <com.smartit.beunique.components.BUniqueTextView
            android:id="@+id/tv_cancel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/layout_border"
            android:gravity="center"
            android:text="@string/cancel_str"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp" />

        <com.smartit.beunique.components.BUniqueTextView
            android:id="@+id/tv_submit"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/layout_border"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>